--- a/app/src/main/res/layout/fragment_new_movie.xml
+++ b/app/src/main/res/layout/fragment_new_movie.xml
@@ -19,7 +19,7 @@
             android:ems="10"
             android:id="@+id/editText" android:hint="Title"/>
     <Button
-            android:text="Button"
+            android:text="Add"
             android:layout_width="match_parent"
             android:layout_height="wrap_content" android:id="@+id/button"/>
 </LinearLayout>
